--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,10 @@
 package:
-  name: numactl-devel-cos6-x86_64
-  version: 2.0.9
+  name: numactl-devel-cos7-ppc64le
+  version: 2.0.12
 
 source:
-  - url: http://mirror.centos.org/centos/6.10/os/x86_64/Packages/numactl-devel-2.0.9-2.el6.x86_64.rpm
-    sha256: 0c8d3b3a8bd677c152c7649f603157ba38114e960e62450fa711dfd3d9185037
+  - url: http://mirror.centos.org/altarch/7/os/ppc64le/Packages/numactl-devel-2.0.12-3.el7.ppc64le.rpm
+    sha256: f4bfb27049880612585278d2f3e3c328d3a627a366567106311299c0524e892d
     folder: binary
 
 build:
@@ -15,13 +15,13 @@ build:
 
 requirements:
   build:
-    - numactl-cos6-x86_64 ==2.0.9
+    - numactl-cos7-ppc64le ==2.0.12
   run:
-    - numactl-cos6-x86_64 ==2.0.9
+    - numactl-cos7-ppc64le ==2.0.12
 
 test:
   commands:
-    - test -d "${PREFIX}/x86_64-conda_cos6-linux-gnu/sysroot"
+    - test -d "${PREFIX}/powerpc64le-conda_cos7-linux-gnu/sysroot"
   requires:
     - zlib
 
@@ -40,3 +40,4 @@ about:
 extra:
   recipe-maintainers:
     - jakirkham
+    - ychfan
